@@ -1,5 +1,7 @@
 Version 3.3.3 (2010-xx-xx)
 	Removed some unnecessary inline style information from some of the dialogs.
+	Fixed some issues with the changing for the TinyMCE jQuery plugin.
+	Fixed bug where some texts in the new paste plugin wasn't placed in language pack.
 Version 3.3.2 (2010-03-25)
 	Fixed bug where it was possible to scale the editor iframe smaller than the editor UI.
 	Fixed bug where some of the resizing option didn't work with the new live resize.
